<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTripActivity"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_16"
                android:layout_marginTop="@dimen/space_16"
                android:layout_marginBottom="@dimen/space_8"
                android:text="@string/trip_name"
                android:textSize="@dimen/dim_16"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/tripNameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_16"
                android:drawableLeft="@drawable/ic_action_name"
                android:textColorHighlight="@color/colorAccent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_16"
                android:layout_marginTop="@dimen/space_16"
                android:layout_marginBottom="@dimen/space_8"
                android:text="@string/destinaion"
                android:textSize="@dimen/dim_16"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/destinationET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_16"
                android:drawableLeft="@drawable/ic_action_flight" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_16"
                android:layout_marginTop="@dimen/space_16"
                android:layout_marginBottom="@dimen/space_8"
                android:text="@string/trip_type"
                android:textSize="@dimen/dim_16"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_8"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radiobutton_city_break"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/space_8"
                    android:text="@string/city_break" />

                <RadioButton
                    android:id="@+id/radiobutton_sea_side"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/space_8"
                    android:text="@string/sea_side" />

                <RadioButton
                    android:id="@+id/radiobutton_mountains"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/space_8"
                    android:text="@string/mountains" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_16"
                android:layout_marginTop="@dimen/space_16"
                android:layout_marginBottom="@dimen/space_8"
                android:text="@string/price_eur"
                android:textSize="@dimen/dim_16"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/seekbar_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_16"
                android:max="3000"
                android:progress="20" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/space_16"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/start_date"
                        android:textSize="@dimen/dim_16"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/startDateBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dd_mm_yyyy" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/space_16"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/end_date"
                        android:textSize="@dimen/dim_16"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/endDateBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dd_mm_yyyy" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_16"
                android:text="@string/rating"
                android:textSize="@dimen/dim_16"
                android:textStyle="bold" />

            <RatingBar
                android:id="@+id/ratingbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_16"
                android:layout_marginTop="@dimen/space_8" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/space_16"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gallery_photo"
                        android:textSize="@dimen/dim_16"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/button_select_picture"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/select" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/space_16"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/take_picture"
                        android:textSize="@dimen/dim_16"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/button_take_picture"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/select" />
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/imageview_trip_picture"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:visibility="gone"
                />

            <Button
                android:id="@+id/button_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_16"
                android:background="@color/colorPrimary"
                android:text="@string/save"
                android:onClick="saveOnClick"
                android:textColor="@android:color/white" />


        </LinearLayout>


    </ScrollView>



</LinearLayout>